--- a/LaTeX1.tex
+++ b/LaTeX1.tex
@@ -3,10 +3,20 @@
 \usepackage[utf8]{inputenc}
 
 %opening
-\title{}
-\author{}
+\title{}\textbf{Wydzia³ Matematyki i Informatyki Uniwersytetu
+Warmiñsko-Mazurskiego}
+\author{}Organek Piotr
 
 \begin{document}
+Wydzia³ Matematyki i Informatyki Uniwersytetu Warmiñsko-Mazurskiego (WMiI) – wydzia³ Uniwersytetu Warmiñsko-Mazurskiegow Olsztynie oferuj¹cy studia na dwóch kierunkach:
+\begin{itemize}
+	\item Informatyka 
+\end{itemize}
+\begin{itemize}
+	\item Matematyka 
+\end{itemize}
+w trybie studiów stacjonarnych i niestacjonarnych. Ponadto oferuje studia podyplomowe.
+Wydzia³ zatrudnia 8 profesorów, 14 doktorów habilitowanych, 53 doktorów i 28 magistrów
 
 \maketitle
 
